--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A casino bot ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Az-r-ow",
   "license": "ISC",
@@ -12,6 +13,7 @@
     "@discordjs/builders": "^0.7.0",
     "@discordjs/rest": "^0.1.0-canary.0",
     "discord-api-types": "^0.24.0",
-    "discord.js": "^13.2.0"
+    "discord.js": "^13.2.0",
+    "mongoose": "^6.0.11"
   }
 }
